--- a/Web/QQR.Web.csproj
+++ b/Web/QQR.Web.csproj
@@ -136,6 +136,7 @@
     <Compile Include="Models\TestimonialViewModel.cs" />
     <Compile Include="Models\ScheduleViewModel.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="Controllers\ServicesController.cs" />
   </ItemGroup>
   <ItemGroup>
     <Content Include="App_Data\Testimonials.xml" />
@@ -144,6 +145,7 @@
     <Content Include="Content\custom\layout.css" />
     <Content Include="Content\custom\validation.css" />
     <Content Include="Content\images\bg.jpg" />
+    <Content Include="Content\images\caret.png" />
     <Content Include="Content\images\hero.jpg" />
     <Content Include="Content\images\hero_shadow.jpg" />
     <Content Include="Content\images\html_bg.jpg" />
@@ -212,10 +214,11 @@
     <Content Include="Scripts\knockout-3.5.1.debug.js" />
     <Content Include="Scripts\knockout-3.5.1.js" />
     <Content Include="Scripts\modernizr-2.8.3.js" />
+    <Content Include="Scripts\qqr.services.js" />
     <Content Include="Scripts\qqr.contactus.js" />
     <Content Include="Scripts\jquery\jquery-1.9.0.min.js" />
     <Content Include="Scripts\jquery\jquery-ui-1.10.0.js" />
-    <Content Include="Scripts\jquery\jquery-ui-datetimepicker.js" />
+    <Content Include="Scripts\jquery-ui-datetimepicker.js" />
     <Content Include="Scripts\jquery\modernizr-2.6.2.min.js" />
     <Content Include="Scripts\main.js" />
     <Content Include="Scripts\plugins.js" />
@@ -234,6 +237,7 @@
     <Content Include="Views\_ViewStart.cshtml" />
     <Content Include="Views\Shared\Error.cshtml" />
     <Content Include="Views\Shared\_Layout.cshtml" />
+    <Content Include="Views\Services\CourtReporting.cshtml" />
   </ItemGroup>
   <ItemGroup>
     <Content Include="Scripts\jquery-3.4.1.slim.min.map" />
@@ -264,10 +268,10 @@
     </ProjectReference>
   </ItemGroup>
   <ItemGroup>
-    <Content Include="Views\Home\Services.cshtml" />
+    <Content Include="Views\Services\Services.cshtml" />
   </ItemGroup>
   <ItemGroup>
-    <Content Include="Views\Home\_Navigation.cshtml" />
+    <Content Include="Views\Shared\_Navigation.cshtml" />
   </ItemGroup>
   <ItemGroup>
     <Content Include="Views\Home\_Alert.cshtml" />
@@ -278,6 +282,7 @@
   <ItemGroup>
     <Content Include="Scripts\jquery-3.4.1.min.map" />
   </ItemGroup>
+  <ItemGroup />
   <PropertyGroup>
     <VisualStudioVersion Condition="'$(VisualStudioVersion)' == ''">10.0</VisualStudioVersion>
     <VSToolsPath Condition="'$(VSToolsPath)' == ''">$(MSBuildExtensionsPath32)\Microsoft\VisualStudio\v$(VisualStudioVersion)</VSToolsPath>
