--- a/Logic/app.config
+++ b/Logic/app.config
@@ -45,7 +45,7 @@
 </value>
             </setting>
             <setting name="ContactToAddress" serializeAs="String">
-                <value>info@quinnsreporting.com</value>
+                <value>contact@quinnsreporting.com</value>
             </setting>
             <setting name="ScheduleSubject" serializeAs="String">
                 <value>Schedule Request</value>
@@ -131,8 +131,15 @@
 </value>
             </setting>
             <setting name="ScheduleToAddress" serializeAs="String">
-                <value>rtbattreall@cox.net</value>
+                <value>contact@quinnsreporting.com</value>
+            </setting>
+            <setting name="ContactFromAddress" serializeAs="String">
+                <value>vickie@quinnsreporting.com</value>
+            </setting>
+            <setting name="ScheduleFromAddress" serializeAs="String">
+                <value>vickie@quinnsreporting.com</value>
             </setting>
         </LyncStream.QQR.Logic.Properties.Settings>
     </applicationSettings>
-<startup><supportedRuntime version="v4.0" sku=".NETFramework,Version=v4.0"/></startup></configuration>
+<startup><supportedRuntime version="v4.0" sku=".NETFramework,Version=v4.0"/></startup>
+</configuration>
