--- a/Web/Web.config
+++ b/Web/Web.config
@@ -5,17 +5,13 @@
   -->
 <configuration>
   <configSections>
-    <sectionGroup name="applicationSettings"
-      type="System.Configuration.ApplicationSettingsGroup, System, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089">
-      <section name="LyncStream.QQR.DataAccess.Properties.Settings"
-        type="System.Configuration.ClientSettingsSection, System, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089" requirePermission="false"/>
-      <section name="LyncStream.QQR.Logic.Properties.Settings"
-        type="System.Configuration.ClientSettingsSection, System, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089" requirePermission="false"/>
+    <sectionGroup name="applicationSettings" type="System.Configuration.ApplicationSettingsGroup, System, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089">
+      <section name="LyncStream.QQR.DataAccess.Properties.Settings" type="System.Configuration.ClientSettingsSection, System, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089" requirePermission="false"/>
+      <section name="LyncStream.QQR.Logic.Properties.Settings" type="System.Configuration.ClientSettingsSection, System, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089" requirePermission="false"/>
     </sectionGroup>
   </configSections>
   <connectionStrings>
-    <add name="ApplicationServices" connectionString="Data Source=rtbattreall-pc;initial catalog=Membership;UID=sa;PWD=Password1;"
-      providerName="System.Data.SqlClient"/>
+    <add name="ApplicationServices" connectionString="Data Source=rtbattreall-pc;initial catalog=Membership;UID=sa;PWD=Password1;" providerName="System.Data.SqlClient"/>
   </connectionStrings>
   <appSettings>
     <add key="webpages:Version" value="2.0.0.0"/>
@@ -25,9 +21,11 @@
     <add key="UnobtrusiveJavaScriptEnabled" value="true"/>
   </appSettings>
   <system.web>
-    <httpRuntime/>
+    <trust level="Full" originUrl=""/>
     <compilation debug="true" targetFramework="4.0"/>
-    <customErrors mode="Off" defaultRedirect="Error"/>
+    <customErrors mode="On" defaultRedirect="~/Error/" redirectMode="ResponseRedirect">
+      <error statusCode="404" redirect="~/Error/NotFound/"/>
+    </customErrors>
     <authentication mode="Forms">
       <forms loginUrl="~/Account/LogOn" timeout="2880"/>
     </authentication>
@@ -45,10 +43,7 @@
     <membership>
       <providers>
         <clear/>
-        <add name="AspNetSqlMembershipProvider" type="System.Web.Security.SqlMembershipProvider" connectionStringName="ApplicationServices"
-          enablePasswordRetrieval="false" enablePasswordReset="true" requiresQuestionAndAnswer="false" requiresUniqueEmail="false"
-          maxInvalidPasswordAttempts="5" minRequiredPasswordLength="6" minRequiredNonalphanumericCharacters="0" passwordAttemptWindow="10"
-          applicationName="QQR"/>
+        <add name="AspNetSqlMembershipProvider" type="System.Web.Security.SqlMembershipProvider" connectionStringName="ApplicationServices" enablePasswordRetrieval="false" enablePasswordReset="true" requiresQuestionAndAnswer="false" requiresUniqueEmail="false" maxInvalidPasswordAttempts="5" minRequiredPasswordLength="6" minRequiredNonalphanumericCharacters="0" passwordAttemptWindow="10" applicationName="QQR"/>
       </providers>
     </membership>
     <profile>
@@ -64,6 +59,7 @@
         <add applicationName="QQR" name="AspNetWindowsTokenRoleProvider" type="System.Web.Security.WindowsTokenRoleProvider"/>
       </providers>
     </roleManager>
+    <httpRuntime enableVersionHeader="false"/>
   </system.web>
   <system.webServer>
     <validation validateIntegratedModeConfiguration="false"/>
@@ -71,16 +67,32 @@
       <remove name="ExtensionlessUrlHandler-ISAPI-4.0_32bit"/>
       <remove name="ExtensionlessUrlHandler-ISAPI-4.0_64bit"/>
       <remove name="ExtensionlessUrlHandler-Integrated-4.0"/>
-      <add name="ExtensionlessUrlHandler-ISAPI-4.0_32bit" path="*." verb="GET,HEAD,POST,DEBUG,PUT,DELETE,PATCH,OPTIONS" modules="IsapiModule"
-        scriptProcessor="%windir%\Microsoft.NET\Framework\v4.0.30319\aspnet_isapi.dll" preCondition="classicMode,runtimeVersionv4.0,bitness32"
-        responseBufferLimit="0"/>
-      <add name="ExtensionlessUrlHandler-ISAPI-4.0_64bit" path="*." verb="GET,HEAD,POST,DEBUG,PUT,DELETE,PATCH,OPTIONS" modules="IsapiModule"
-        scriptProcessor="%windir%\Microsoft.NET\Framework64\v4.0.30319\aspnet_isapi.dll" preCondition="classicMode,runtimeVersionv4.0,bitness64"
-        responseBufferLimit="0"/>
-      <add name="ExtensionlessUrlHandler-Integrated-4.0" path="*." verb="GET,HEAD,POST,DEBUG,PUT,DELETE,PATCH,OPTIONS"
-        type="System.Web.Handlers.TransferRequestHandler" preCondition="integratedMode,runtimeVersionv4.0"/>
+      <add name="ExtensionlessUrlHandler-ISAPI-4.0_32bit" path="*." verb="GET,HEAD,POST,DEBUG,PUT,DELETE,PATCH,OPTIONS" modules="IsapiModule" scriptProcessor="%windir%\Microsoft.NET\Framework\v4.0.30319\aspnet_isapi.dll" preCondition="classicMode,runtimeVersionv4.0,bitness32" responseBufferLimit="0"/>
+      <add name="ExtensionlessUrlHandler-ISAPI-4.0_64bit" path="*." verb="GET,HEAD,POST,DEBUG,PUT,DELETE,PATCH,OPTIONS" modules="IsapiModule" scriptProcessor="%windir%\Microsoft.NET\Framework64\v4.0.30319\aspnet_isapi.dll" preCondition="classicMode,runtimeVersionv4.0,bitness64" responseBufferLimit="0"/>
+      <add name="ExtensionlessUrlHandler-Integrated-4.0" path="*." verb="GET,HEAD,POST,DEBUG,PUT,DELETE,PATCH,OPTIONS" type="System.Web.Handlers.TransferRequestHandler" preCondition="integratedMode,runtimeVersionv4.0"/>
     </handlers>
+    <!--<rewrite>
+      <rules>
+        <rule name="CanonicalHostNameRule1">
+          <match url="(.*)" />
+          <conditions>
+            <add input="{HTTP_HOST}" pattern="^www\.quinnsreporting\.com$" negate="true" />
+          </conditions>
+          <action type="Redirect" url="http://www.quinnsreporting.com/{R:1}" />
+        </rule>
+      </rules>
+    </rewrite>-->
+    <!--<staticContent>
+      <clientCache cacheControlCustom="public" cacheControlMaxAge="12:00:00" cacheControlMode="UseMaxAge" />
+    </staticContent>-->
   </system.webServer>
+  <system.net>
+    <mailSettings>
+      <smtp from="contact@quinnsreporting.com">
+        <network host="relay-hosting.secureserver.net" port="25" />
+      </smtp>
+    </mailSettings>
+  </system.net>
   <runtime>
     <assemblyBinding xmlns="urn:schemas-microsoft-com:asm.v1">
       <dependentAssembly>
@@ -88,40 +100,53 @@
         <bindingRedirect oldVersion="1.0.0.0-2.0.0.0" newVersion="2.0.0.0"/>
       </dependentAssembly>
       <dependentAssembly>
+        <assemblyIdentity name="System.Web.Mvc" publicKeyToken="31bf3856ad364e35"/>
+        <bindingRedirect oldVersion="1.0.0.0-4.0.0.1" newVersion="4.0.0.1"/>
+      </dependentAssembly>
+      <dependentAssembly>
         <assemblyIdentity name="System.Web.WebPages" publicKeyToken="31bf3856ad364e35"/>
         <bindingRedirect oldVersion="1.0.0.0-2.0.0.0" newVersion="2.0.0.0"/>
       </dependentAssembly>
       <dependentAssembly>
-        <assemblyIdentity name="System.Web.Mvc" publicKeyToken="31bf3856ad364e35"/>
-        <bindingRedirect oldVersion="4.0.0.0-4.0.0.1" newVersion="4.0.0.1"/>
+        <assemblyIdentity name="Newtonsoft.Json" publicKeyToken="30ad4fe6b2a6aeed"/>
+        <bindingRedirect oldVersion="0.0.0.0-6.0.0.0" newVersion="6.0.0.0"/>
       </dependentAssembly>
     </assemblyBinding>
   </runtime>
   <applicationSettings>
     <LyncStream.QQR.DataAccess.Properties.Settings>
-      <setting name="SmtpServer" serializeAs="String">
-        <value>smtp.cox.net</value>
+      <setting name="PortNumber" serializeAs="String">
+        <value>587</value>
       </setting>
-      <setting name="UseCredentials" serializeAs="String">
+      <setting name="EnableSSL" serializeAs="String">
         <value>True</value>
       </setting>
-      <setting name="PortNumber" serializeAs="String">
-        <value>25</value>
+      <setting name="UseCredentials" serializeAs="String">
+        <value>False</value>
+      </setting>
+      <setting name="SmtpServer" serializeAs="String">
+        <value>relay-hosting.secureserver.net</value>
       </setting>
       <setting name="UserName" serializeAs="String">
-        <value>rtbattreall@cox.net</value>
+        <value>contact@quinnsreporting.com</value>
       </setting>
       <setting name="Password" serializeAs="String">
-        <value>B@tm@n123</value>
+        <value>Sailingaway@5706</value>
       </setting>
     </LyncStream.QQR.DataAccess.Properties.Settings>
-    <LyncStream.QQR.Logic.Properties.Settings>     
+    <LyncStream.QQR.Logic.Properties.Settings>
       <setting name="ContactToAddress" serializeAs="String">
         <value>contact@quinnsreporting.com</value>
-      </setting>     
+      </setting>
       <setting name="ScheduleToAddress" serializeAs="String">
         <value>contact@quinnsreporting.com</value>
-      </setting>      
+      </setting>
+      <setting name="ContactFromAddress" serializeAs="String">
+        <value>vickie@quinnsreporting.com</value>
+      </setting>
+      <setting name="ScheduleFromAddress" serializeAs="String">
+        <value>>vickie@quinnsreporting.com</value>
+      </setting>
     </LyncStream.QQR.Logic.Properties.Settings>
   </applicationSettings>
 </configuration>
