--- a/Web/packages.config
+++ b/Web/packages.config
@@ -1,5 +1,6 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <packages>
+  <package id="Antlr" version="3.1.1" targetFramework="net40" />
   <package id="EntityFramework" version="5.0.0" targetFramework="net45" />
   <package id="jQuery" version="1.7.1.1" targetFramework="net45" />
   <package id="jQuery.UI.Combined" version="1.8.20.1" targetFramework="net45" />
@@ -9,7 +10,7 @@
   <package id="Microsoft.AspNet.Providers.Core" version="1.1" targetFramework="net45" />
   <package id="Microsoft.AspNet.Providers.LocalDB" version="1.1" targetFramework="net45" />
   <package id="Microsoft.AspNet.Razor" version="2.0.20710.0" targetFramework="net45" />
-  <package id="Microsoft.AspNet.Web.Optimization" version="1.0.0" targetFramework="net45" />
+  <package id="Microsoft.AspNet.Web.Optimization" version="1.0.0" targetFramework="net40" />
   <package id="Microsoft.AspNet.WebApi" version="4.0.20710.0" targetFramework="net45" />
   <package id="Microsoft.AspNet.WebApi.Client" version="4.0.20710.0" targetFramework="net45" />
   <package id="Microsoft.AspNet.WebApi.Core" version="4.0.20710.0" targetFramework="net45" />
